Lab11 16/App1/app1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-deploy
spec:
  selector:
    matchLabels:
      app: app1
      version: v1
  template:
    metadata:
      labels:
        app: app1
        version: v1
    spec:
      containers:
      - name: app1
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
        - name:  app1-volume
          mountPath:  /usr/share/nginx/html
      volumes:
      - name:  app1-volume
        configMap:
          name: app1-configmap
