Lab11 16/App1/app1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
spec:
  selector:
    app: app1
  ports:
  - name: http-default
    port: 80
