Lab11 16/App1/app1-destinationrules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app1-destinationrules
spec:
  host: app1-svc.default.svc.cluster.local
  subsets:
  - name: app1-v1-subset
    labels:
      app: app1
      version: v1
