Lab11 16/App1/app1-gateway-virtualservice.yaml
# See more at https://istio.io/docs/reference/config/networking/virtual-service/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app1-gateway-virtualservice
spec:
  hosts:
  - app1.com
  gateways:
  - app1-gateway
  http:
  - route:
    - destination:
        host: app2-svc.default.svc.cluster.local
        subset: app2-v1-subset
      weight: 100
